--- a/yurts.html
+++ b/yurts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content = "width= device-width,initial scale=1.0">
 <head>
 <title>Pacific Trails Resort :: Yurts</title>
 <meta charset="utf-8">
@@ -13,8 +14,8 @@
 <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="yurts.html">Yurts</a></li> 
-  <li><a href="activities.html">Activities</a></li> 
+  <li><a href="yurts.html">Yurts</a></li>
+  <li><a href="activities.html">Activities</a></li>
   <li><a href="reservations.html">Reservations</a></li>
 </ul>
 </nav>
